Fix the header
Because adding a fixed header on top actually affects this kind of thing.
Also, small fix for icons overlapping the table header is added too!

--- a/app/assets/stylesheets/sources.scss
+++ b/app/assets/stylesheets/sources.scss
@@ -5,9 +5,10 @@
 /* Override table header. */
 .floatingheader thead {
     position: sticky;
-    top: 0;
+    top: 60px;
     background-color: $body-bg;
     border-bottom: 1px solid dimgray;
+    z-index: 999999;
 }
 
 /* Override table border trick
